Fix line spacing

--- a/css/index.css
+++ b/css/index.css
@@ -297,6 +297,7 @@ button:hover {
   text-align: left;
   margin: 20px;
   margin-top: 6px;
+  line-height: 155%;
   font-size: .95em;
   color: rgba(0, 0, 0, 0.7);
 }
